--- a/README
+++ b/README
@@ -48,25 +48,25 @@ Guidelines for submitting patches
 =================================
 
 Please submit any patches against meta-intel-axxia BSPs to the 
-meta-intel-axxia mailing list (meta-lsi@yoctoproject.org) and 
+meta-intel-axxia mailing list (meta-axxia@yoctoproject.org) and
 cc: the maintainers.
 
 Mailing list:
-    https://lists.yoctoproject.org/listinfo/meta-lsi
+    https://lists.yoctoproject.org/listinfo/meta-axxia
 
 When creating patches, please use something like:
     git format-patch -s --subject-prefix='meta-intel-axxia][PATCH' origin
 
 When sending patches, please use something like:
-    git send-email --to meta-lsi@yoctoproject.org --cc (maintainers)
+    git send-email --to meta-axxia@yoctoproject.org --cc (maintainers)
 		      (generated patch)
 
 
 Maintenance
 ===========
 
-Maintainers: Daniel Dragomir (daniel.dragomir@windriver.com)
-	     John Jacques (john.jacques@intel.com)
+Maintainers: John Jacques (john.jacques@intel.com)
+             Daniel Dragomir (daniel.dragomir@windriver.com)
 
 Please see the MAINTAINERS file for more details.
 
