--- a/meta-intel-vcn/README
+++ b/meta-intel-vcn/README
@@ -462,10 +462,45 @@ mounted on root / directory using the readonly rootfs as lowerdir and
 the tmpfs one as upperdir. All the user specific changes will be stored
 in tmpfs, so will be volative.
 
-For persistent user changes, a new read-write partition need to be
-present and set with the following Kernel command line parameter:
+For persistent user changes, a new read-write device/partition need to
+be present and set with the following Kernel command line parameter:
 
-    rootrw=/dev/sda2
+    rootrw=/dev/sda1
+    
+The lower filesystem can be any filesystem supported by Linux and does
+not need to be writable. But, since the upper filesystem will normally
+be writable, it must support the creation of trusted.* extended
+attributes, and must provide valid d_type in readdir responses, so NFS
+is not suitable.
+
+Other Kernel command line parameters:
+root= specifies the read-only root file system device. If this is not 
+      specified, the current rootfs is used.
+
+rootfstype= if support for the read-only file system is not build into
+            the kernel, you can specify the required module name here.
+            It will also be used in the mount command.
+
+rootoptions= specifies the mount options of the read-only file system. 
+             Defaults to noatime,nodiratime.
+
+rootinit= if the init parameter was set to init-readonly-overlay script,
+          rootinit can be used to overwrite the default (/sbin/init).
+          E.g. rootinit=/bin/sh
+
+rootrw= specifies the read-write file system device. If this is not
+        specified, tmpfs is used.
+
+rootrwfstype= if support for the read-write file system is not build
+              into the kernel, you can specify the required module name
+              here. It will also be used in the mount command.
+
+rootrwoptions= specifies the mount options of the read-write file
+               system. Defaults to rw,noatime.
+
+rootrwreset= set to yes if you want to delete all the files in the
+             read-write file system prior to building the overlay root
+             files system.
 
 More details on how to setup a writable root file system overlay on
 top of a read-only root file system can be found in
