--- a/meta-intel-vcn/README
+++ b/meta-intel-vcn/README
@@ -60,7 +60,7 @@ II. Building meta-intel-vcn
 1.1. Clone the Intel Axxia repository. This provides OpenEmbedded/Yocto
    layers with metadata for building images for the Intel Axxia specific
    reference platforms. See 'Sources' from the main README to select the
-   right repository. Use the 'master' branch or the tag specified in the
+   right repository. Use the 'hardknott' branch or the tag specified in the
    release notes.
 
    $ cd $YOCTO
@@ -70,9 +70,9 @@ II. Building meta-intel-vcn
    $ git clone https://github.com/axxia/meta-intel-axxia.git
    $ cd meta-intel-axxia
 
-   If using the 'master' branch.
+   If using the 'hardknott' branch.
 
-   $ git checkout master
+   $ git checkout hardknott
 
    If using the tag specified in the releases notes.
 
