README: Update Axxia image/filesystem names
A0329 - Rename the File Systems -- But Add some Links for Now

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-rdk/README
+++ b/meta-intel-rdk/README
@@ -150,7 +150,7 @@ in conf/local.conf:
 
      -I$(SDKTARGETSYSROOT)/usr/kernel-headers/include
 
-     When using the axxia-image-vcn root file system on SNR add the
+     When using the axxia-image-dev root file system on SNR add the
      following.
 
      -I/usr/kernel-headers/include
