--- a/meta-intel-snr/README
+++ b/meta-intel-snr/README
@@ -96,6 +96,15 @@ and in dmesg look for:
 Included as
 SNR-0002-clocksource-Add-option-to-force-acpi_pm-as-clocksour.patch.
 
+patches for perf
+----------------
+
+SNR-0004-perf-Cap-allocation-order-at-aux_watermark.patch and
+SNR-0005-perf-intel-pt-Use-aux_watermark.patch.
+
+Removes some limitations to the use of PTWRITE.  Without the above
+'perf record' and 'per script' issue warnings about lost data.
+
 
 II. Building meta-intel-snr
 ===========================
