--- a/meta-intel-bsp/README
+++ b/meta-intel-bsp/README
@@ -79,7 +79,8 @@ will be fixed in later versions of the chip.
 Note that, by default, this patch will do nothing.  To enable it, add
 'iTCO_wdt.assume_noreboot_access=1' to the Linux command line.
 
-Included as SNR-0001-drivers-watchdog-Ignore-No-Reboot-Bit.patch.
+Included as COM-0001-drivers-watchdog-Ignore-No-Reboot-Bit.patch.
+
 
 clocksource: Add option to force acpi_pm as clocksource watchdog
 ----------------------------------------------------------------
@@ -95,16 +96,34 @@ and in dmesg look for:
     RICARDO: Force acpi_pm as watchdog
 
 Included as
-SNR-0002-clocksource-Add-option-to-force-acpi_pm-as-clocksour.patch.
+COM-0002-clocksource-Add-option-to-force-acpi_pm-as-clocksour.patch.
 
-patches for perf
-----------------
 
-SNR-0004-perf-Cap-allocation-order-at-aux_watermark.patch and
-SNR-0005-perf-intel-pt-Use-aux_watermark.patch.
+Patches for perf (only for SNR)
+-------------------------------
+
+SNR-0001-perf-Cap-allocation-order-at-aux_watermark.patch and
+SNR-0002-perf-intel-pt-Use-aux_watermark.patch.
 
 Removes some limitations to the use of PTWRITE.  Without the above
 'perf record' and 'per script' issue warnings about lost data.
+
+
+Support Serial Flash Access (MTD) to Boot Flash (only for GRR)
+--------------------------------------------------------------
+
+Allows access to the secondary boot flash from Linux using the MTD driver.
+
+GRR-0001-mtd-spi-nor-intel-spi-Move-platform-data-header-to-x.patch
+GRR-0002-mtd-spi-nor-intel-spi-Add-is_protected-and-bios_lock.patch
+GRR-0003-mtd-spi-nor-intel-spi-Add-support-for-second-flash-c.patch
+
+
+Support for SIOV (only for GRR)
+-------------------------------
+
+GRR-0004-platform-msi-Add-device-MSI-infrastructure.patch
+GRR-0005-genirq-msi-Provide-helpers-to-return-Linux-IRQ-dev_m.patch
 
 
 II. Building meta-intel-bsp
