Rename RUNTARGET option for Victoria Canyon: snr->vcn
RUNTARGET variable is used to choose the reference platform
where the image will run:
- 'snr' -> 'vcn' for Victoria Canyon board or ASE (default)
- 'frio' for  Frio FPGA Emulation System

The purpose is to merge SNR and GRR branches.

Signed-off-by: Daniel Dragomir <Daniel.Dragomir@windriver.com>

--- a/meta-intel-distro/README
+++ b/meta-intel-distro/README
@@ -255,7 +255,7 @@ NOTE: No preferred version should be set for linux-local provider.
 2.3.7. Choose the reference platform where the image will run:
 
     for Victoria Canyon board or ASE (default):
-    RUNTARGET = "snr"
+    RUNTARGET = "vcn"
 
     for Frio FPGA Emulation System:
     RUNTARGET = "frio"
@@ -312,7 +312,7 @@ MACHINE = "intel-axxia-snr"
 PREFERRED_PROVIDER_virtual/kernel = "linux-intel"
 PREFERRED_VERSION_linux-intel = "5.10%"
 DISTRO = "intel-axxia"
-RUNTARGET = "snr"
+RUNTARGET = "vcn"
 DISTRO_FEATURES_append = " simicsfs"
 PACKAGE_CLASSES ?= "package_rpm"
 EXTRA_IMAGE_FEATURES ?= "debug-tweaks"
