--- a/meta-intel-snr/README
+++ b/meta-intel-snr/README
@@ -78,7 +78,7 @@ will be fixed in later versions of the chip.
 Note that, by default, this patch will do nothing.  To enable it, add
 'iTCO_wdt.assume_noreboot_access=1' to the Linux command line.
 
-Included as SNR-0001-drivers-watchdog-Ignore-No-Reboot-Bit.patch.
+Included as SNR-0001-drivers-watchdog-Ignore-No-Reboot-Bit.patch
 
 clocksource: Add option to force acpi_pm as clocksource watchdog
 ----------------------------------------------------------------
@@ -94,7 +94,7 @@ and in dmesg look for:
     RICARDO: Force acpi_pm as watchdog
 
 Included as
-SNR-0002-clocksource-Add-option-to-force-acpi_pm-as-clocksour.patch.
+SNR-0002-clocksource-Add-option-to-force-acpi_pm-as-clocksour.patch
 
 Support Serial Flash Access (MTD) to Boot Flash
 -----------------------------------------------
@@ -102,20 +102,31 @@ Support Serial Flash Access (MTD) to Boot Flash
 Allows access to the secondary boot flash from Linux using the MTD driver.
 
 SNR-0003-mtd-spi-nor-intel-spi-Move-platform-data-header-to-x.patch
-SNR-0004-mtd-spi-nor-intel-spi-Add-is_protected-and-bios_lock.patch
 
 and
 
-SNR-0005-mtd-spi-nor-intel-spi-Add-support-for-second-flash-c.patch
+SNR-0004-mtd-spi-nor-intel-spi-Add-support-for-second-flash-c.patch
 
 Support for SIOV
 ---------------------------------------------------------------------
 
-SNR-0006-platform-msi-Add-device-MSI-infrastructure.patch
+SNR-0005-platform-msi-Add-device-MSI-infrastructure.patch
 
 and
 
-SNR-0007-genirq-msi-Provide-helpers-to-return-Linux-IRQ-dev_m.patch
+SNR-0006-genirq-msi-Provide-helpers-to-return-Linux-IRQ-dev_m.patch
+
+TCO Functionality
+---------------------------------------------------------------------
+
+SNR-0007-watchdog-iTCO_wdt-use-module_platform_device-macro.patch
+SNR-0008-watchdog-iTCO_wdt-use-dev_-instead-of-pr_-for-loggin.patch
+SNR-0009-watchdog-iTCO_wdt-use-dev_err-instead-of-pr_err.patch
+SNR-0010-watchdog-iTCO_wdt-Fix-detection-of-SMI-off-case.patch
+
+and
+
+SNR-0011-watchdog-iTCO_wdt-No-need-to-stop-the-timer-in-probe.patch
 
 
 II. Building meta-intel-snr
