--- a/meta-intel-bsp/README
+++ b/meta-intel-bsp/README
@@ -81,7 +81,7 @@ will be fixed in later versions of the chip.
 Note that, by default, this patch will do nothing.  To enable it, add
 'iTCO_wdt.assume_noreboot_access=1' to the Linux command line.
 
-Included as COM-0001-drivers-watchdog-Ignore-No-Reboot-Bit.patch.
+Included as COM-0001-drivers-watchdog-Ignore-No-Reboot-Bit.patch
 
 
 clocksource: Add option to force acpi_pm as clocksource watchdog
@@ -98,7 +98,7 @@ and in dmesg look for:
     RICARDO: Force acpi_pm as watchdog
 
 Included as
-COM-0002-clocksource-Add-option-to-force-acpi_pm-as-clocksour.patch.
+COM-0002-clocksource-Add-option-to-force-acpi_pm-as-clocksour.patch
 
 
 Patches for perf (only for SNR)
@@ -117,15 +117,24 @@ Support Serial Flash Access (MTD) to Boot Flash (only for GRR)
 Allows access to the secondary boot flash from Linux using the MTD driver.
 
 GRR-0001-mtd-spi-nor-intel-spi-Move-platform-data-header-to-x.patch
-GRR-0002-mtd-spi-nor-intel-spi-Add-is_protected-and-bios_lock.patch
-GRR-0003-mtd-spi-nor-intel-spi-Add-support-for-second-flash-c.patch
+GRR-0002-mtd-spi-nor-intel-spi-Add-support-for-second-flash-c.patch
 
 
 Support for SIOV (only for GRR)
 -------------------------------
 
-GRR-0004-platform-msi-Add-device-MSI-infrastructure.patch
-GRR-0005-genirq-msi-Provide-helpers-to-return-Linux-IRQ-dev_m.patch
+GRR-0003-platform-msi-Add-device-MSI-infrastructure.patch
+GRR-0004-genirq-msi-Provide-helpers-to-return-Linux-IRQ-dev_m.patch
+
+
+TCO Functionality (only for GRR)
+--------------------------------
+
+GRR-0005-watchdog-iTCO_wdt-use-module_platform_device-macro.patch
+GRR-0006-watchdog-iTCO_wdt-use-dev_-instead-of-pr_-for-loggin.patch
+GRR-0007-watchdog-iTCO_wdt-use-dev_err-instead-of-pr_err.patch
+GRR-0008-watchdog-iTCO_wdt-Fix-detection-of-SMI-off-case.patch
+GRR-0009-watchdog-iTCO_wdt-No-need-to-stop-the-timer-in-probe.patch
 
 
 II. Building meta-intel-bsp
