--- a/meta-intel-bsp/README
+++ b/meta-intel-bsp/README
@@ -155,6 +155,14 @@ GRR-driver-core-auxiliary-bus-Remove-unneeded-module-bit.patch
 GRR-driver-core-auxiliary-bus-Fix-memory-leak-when-drive.patch
 GRR-driver-core-auxiliary-bus-Add-Config-Option.patch
 
+MDEV Functions
+--------------
+
+GRR only.  Back-ported from lkml.org to support building DLB with MDEV.
+
+GRR-vfio-mdev-Add-a-member-for-iommu-domain-in-mdev_devi.patch
+GRR-vfio-type1-Save-domain-when-attach-domain-to-mdev.patch
+
 
 II. Building meta-intel-bsp
 ===========================
